# person-202603-claude-ai-sound-notify

./: .gitignore  README.md
.claude-plugin/: marketplace.json  plugin.json
commands/: sound-notify-config.md
configs/: claude-code.json  codex.toml  gemini.json
desktop/: package-lock.json  package.json
desktop/.omc/state/: last-tool-error.json
desktop/scripts/: copy-assets.mjs
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: audio.rs  config.rs  lib.rs  main.rs  monitor.rs  tray.rs
docs/: deployment.md  testing.md
docs/superpowers/plans/: 2026-04-17-desktop-notification-client.md
docs/superpowers/specs/: 2026-04-17-desktop-notification-client-design.md
hooks/: hooks.json
hooks/scripts/: notify.sh
scripts/: deploy-wsl.sh
server/: index.js
web/: index.html
